test/cases/compile_errors/comptime_break_inside_runtime_loop.zig
export fn entry() void {
    while (true) {
        comptime break;
    }
}

// error
// backend=stage2
// target=native
//
// :3:18: error: cannot comptime break out of runtime loop
